Fix input/label spacing

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -61,3 +61,7 @@ h4 > small {
 p + p {
   margin-top: 0.5em;
 }
+
+label {
+  margin-right: 0.2em;
+}
